--- a/css/styles.css
+++ b/css/styles.css
@@ -106,8 +106,9 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
-  background-color: #3397DB;
+  height: 100%;
+	padding: 10px 0;
+  background-color: green;
   align-items: center;
 }
 .filter-options h2 {
@@ -136,6 +137,9 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 #restaurants-list li {
   background-color: #fff;
@@ -145,15 +149,17 @@ nav h1 a {
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
-  width: 270px;
+  max-width: 470px;
+	width: 80%;
 }
 #restaurants-list .restaurant-img {
-  background-color: #ccc;
+  background-color: white;
   display: block;
   margin: 0;
   max-width: 100%;
   min-height: 248px;
   min-width: 100%;
+	padding-top: 10px;
 }
 #restaurants-list li h1 {
   color: #f18200;
@@ -188,6 +194,9 @@ nav h1 a {
   top: 0;
   width: 100%;
   z-index: 1000;
+	display: flex;
+	flex-direction: column;
+	background-color: black;
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
@@ -196,6 +205,7 @@ nav h1 a {
   right: 0;
   top: 80px;
   width: 50%;
+	background-color: black;
 }
 .inside #map {
   background-color: #ccc;
@@ -218,7 +228,7 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+	width: 50%;
 }
 #restaurant-address {
   font-size: 12pt;
@@ -234,7 +244,7 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+	width: 50%;
 }
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
