--- a/css/styles.css
+++ b/css/styles.css
@@ -7,10 +7,19 @@ body,td,th,p{
 	color: #333;
 	line-height: 1.5;
 }
-body {
+
+
+
+
+
+html, body {
 	background-color: #fdfdfd;
-	margin: 0;
 	position:relative;
+	width: 100%;
+	height: 100%;
+	margin: 0px;
+	padding: 0px;
+	overflow-x: hidden;
 }
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
@@ -37,7 +46,8 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 #maincontent {
   background-color: #f3f3f3;
-  min-height: 100%;
+  /* min-height: 100%; */
+	width: 100%;
 }
 #footer {
   background-color: #444;
@@ -53,7 +63,7 @@ nav {
   width: 100%;
   height: 80px;
   background-color: #252831;
-  text-align:center;
+  text-align: center;
 }
 nav h1 {
   margin: auto;
@@ -108,7 +118,7 @@ nav h1 a {
   width: 100%;
   height: 100%;
 	padding: 10px 0;
-  background-color: green;
+  background-color: black;
   align-items: center;
 }
 .filter-options h2 {
@@ -137,9 +147,9 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
-	display: flex;
+	/* display: flex;
 	flex-direction: column;
-	align-items: center;
+	align-items: center; */
 }
 #restaurants-list li {
   background-color: #fff;
@@ -154,7 +164,7 @@ nav h1 a {
 }
 #restaurants-list .restaurant-img {
   background-color: white;
-  display: block;
+  /* display: block; */
   margin: 0;
   max-width: 100%;
   min-height: 248px;
@@ -193,30 +203,33 @@ nav h1 a {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1000;
-	display: flex;
-	flex-direction: column;
-	background-color: black;
+  /* z-index: 1000; */
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
+  height: 400px;
   position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
-	background-color: black;
+  /* right: 0; */
+  /* top: 100px; */
+  width: 100%;
+
+	}
+
+
 }
+
 .inside #map {
   background-color: #ccc;
-  height: 100%;
+  height: 400px;
   width: 100%;
 }
+
 .inside #footer {
-  bottom: 0;
+  /* bottom: 0; */
   position: absolute;
-  width: 50%;
+  width: 100%;
 }
+
 #restaurant-name {
   color: #f18200;
   font-family: Arial,sans-serif;
@@ -227,8 +240,9 @@ nav h1 a {
   text-transform: uppercase;
   line-height: 1.1;
 }
+
 #restaurant-img {
-	width: 50%;
+	width: 100%;
 }
 #restaurant-address {
   font-size: 12pt;
@@ -244,16 +258,19 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 50%;
+	width: 100%;
 }
+
 #restaurant-container, #reviews-container {
-  border-bottom: 1px solid #d9d9d9;
-  border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+  /* border-bottom: 1px solid #d9d9d9;
+  border-top: 1px solid #fff; */
+  /* padding: 140px 40px 30px; */
+	/* display: flex; */
+	/* flex-direction: column; */
+	/* align-items: center; */
 }
 #reviews-container {
-  padding: 30px 40px 80px;
+  /* padding: 30px 40px 80px; */
 }
 #reviews-container h2 {
   color: #f58500;
@@ -268,7 +285,7 @@ nav h1 a {
 }
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
