--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,9 @@ nav h1 a {
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: calc(50% - 80px);
+    /* width: calc(50% - 80px); */
+		width: 100%;
+		position: fixed;
 }
 
 /* Display list items side by side */
@@ -185,7 +187,7 @@ nav h1 a {
   display: inline-block;
   font-size: 10pt;
   margin: 15px 0 0;
-  padding: 8px 30px 10px;
+  /* padding: 8px 30px 10px; */
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
@@ -231,7 +233,8 @@ nav h1 a {
 }
 
 #restaurant-img {
-	width: 50%;
+	width: 100%;
+
 }
 #restaurant-address {
   font-size: 12pt;
@@ -251,12 +254,13 @@ nav h1 a {
 }
 
 #restaurant-container, #reviews-container {
-  border-bottom: 1px solid #d9d9d9;
-  border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-	/* display: flex;
+  /* border-bottom: 1px solid #d9d9d9; */
+  /* border-top: 1px solid #fff; */
+  padding: 40px 40px 30px;
+	display: flex;
 	flex-direction: column;
-	align-items: center; */
+	align-items: center;
+	border: 10px dotted orange;
 }
 #reviews-container {
   padding: 30px 40px 80px;
@@ -275,7 +279,7 @@ nav h1 a {
 #reviews-list li {
   background-color: #fff;
   border: 2px solid #f3f3f3;
-  display: block;
+  /* display: block; */
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
