--- a/css/styles.css
+++ b/css/styles.css
@@ -52,8 +52,9 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   background-color: #444;
   color: #aaa;
   font-size: 8pt;
-  letter-spacing: 1px;
-  padding: 25px;
+  letter-spacing: 1.5px;
+	padding-top: 25px;
+	padding-bottom: 25px;
   text-align: center;
   text-transform: uppercase;
 }
@@ -155,7 +156,7 @@ nav h1 a {
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
-  font-family: Arial,sans-serif;
+  font-family: 'Thasadith', sans-serif;
   margin: 15px;
   min-height: 380px;
   padding: 0 30px 25px;
@@ -174,7 +175,7 @@ nav h1 a {
 }
 #restaurants-list li h1 {
   color: #f18200;
-  font-family: Arial,sans-serif;
+  font-family: 'Thasadith', sans-serif;
   font-size: 14pt;
   font-weight: 200;
   letter-spacing: 0;
@@ -260,9 +261,9 @@ nav h1 a {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 40px 40px 30px;
-	/* display: flex;
+	display: flex;
 	flex-direction: column;
-	align-items: center; */
+	align-items: center;
 	border: 10px solid orange;
 }
 #reviews-container {
